--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li>
                     <a href="#">
                         <img src="images/f7.png" alt="">
-                        <p>AA培训</p>
+                        <p>A培训</p>
                     </a>
                 </li>
                 <li>
