--- a/hmsc02.html
+++ b/hmsc02.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/hmsc.css">
+    <link rel="stylesheet" type="text/css" href="css/index02.css">
     <title>商品分类</title>
 </head>
 <body>
@@ -87,47 +87,11 @@
                                 <p>手机</p>
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/s2.jpg" alt="">
-                                <p>手机</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/s2.jpg" alt="">
-                                <p>手机</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/s2.jpg" alt="">
-                                <p>手机</p>
-                            </a>
-                        </li>
                     </ul>
                 </div>
                 <div class="hot_cat">
                     <h3>热门分类</h3>
                     <ul class="clearfix">
-                        <li>
-                            <a href="#">
-                                <img src="images/s2.jpg" alt="">
-                                <p>手机</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/s2.jpg" alt="">
-                                <p>手机</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="images/s2.jpg" alt="">
-                                <p>手机</p>
-                            </a>
-                        </li>
                         <li>
                             <a href="#">
                                 <img src="images/s2.jpg" alt="">
