--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0">
     <title>黑马商城</title>
-    <link rel="stylesheet" type="text/css" href="css/hmsc.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     
@@ -17,145 +17,144 @@
                 <input type="search" placeholder="搜索">
             </form>
             <a href="" class="login">登录</a>
-        </div>
+        </div>        
     </header> 
     <!-- 轮播图 -->
     <div class="hm_banner">
-            <ul class="clearfix">
-                <li><a href="#"><img src="images/images01.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/images02.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/images03.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/images04.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/images05.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/images01.jpg" alt=""></a></li>
-                <li><a href="#"><img src="images/images02.jpg" alt=""></a></li>
-            </ul>
-            <ul>
-                <li class="now"></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>  
-     <!-- 导航栏 -->
-     <nav class="hm_nav">
-            <ul class="clearfix">
-                <li>
-                    <a href="hmsc02.html">
-                        <img src="images/f1.png" alt="">
-                        <p>分类1</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f2.png" alt="">
-                        <p>物流中心</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f3.png" alt="">
-                        <p>购物车</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f4.png" alt="">
-                        <p>个人中心</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f5.png" alt="">
-                        <p>充值中心</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f6.png" alt="">
-                        <p>金融中心</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f7.png" alt="">
-                        <p>A1培训</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/f8.png" alt="">
-                        <p>猜你喜欢</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    <!-- 商品块 -->
-    <main class="hm_product">
-            <section class="product_box hm_sk">
-                <div class="product_box_tit no_border">
-                    <div class="f_left m_110">
-                        <span class="sk_icon"></span>
-                        <span class="sk_name m_110">掌上秒杀</span>
-                        <div>
-                            <span>0</span>
-                            <span>0</span>
-                            <span>:</span>
-                            <span>0</span>
-                            <span>0</span>
-                            <span>:</span>
-                            <span>0</span>
-                            <span>0</span>
-                        </div>
+        <ul class="clearfix">
+            <li><a href="#"><img src="images/images05.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/images01.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/images02.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/images03.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/images04.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/images05.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/images01.jpg" alt=""></a></li>
+        </ul>
+        <ul>
+            <li class="now"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>  
+ <!-- 导航栏 -->
+ <nav class="hm_nav">
+        <ul class="clearfix">
+            <li>
+                <a href="hmsc02.html">
+                    <img src="images/f1.png" alt="">
+                    <p>分类1</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/f2.png" alt="">
+                    <p>物流中心</p>
+                </a>
+            </li>
+            <li>
+                <a href="hmsc03.html">
+                    <img src="images/f3.png" alt="">
+                    <p>购物车</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/f4.png" alt="">
+                    <p>个人中心</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/f5.png" alt="">
+                    <p>充值中心</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/f6.png" alt="">
+                    <p>金融中心</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/f7.png" alt="">
+                    <p>A1培训</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/f8.png" alt="">
+                    <p>猜你喜欢</p>
+                </a>
+            </li>
+        </ul>
+    </nav>
+<!-- 商品块 -->
+<main class="hm_product">
+        <section class="product_box hm_sk">
+            <div class="product_box_tit no_border">
+                <div class="f_left m_110">
+                    <span class="sk_icon"></span>
+                    <span class="sk_name m_110">掌上秒杀</span>
+                    <div>
+                        <span>0</span>
+                        <span>0</span>
+                        <span>:</span>
+                        <span>0</span>
+                        <span>0</span>
+                        <span>:</span>
+                        <span>0</span>
+                        <span>0</span>
                     </div>
-                    <div class="f_right m_r10"><a href="#">更多></a></div>
                 </div>
-                <div class="product_box_con">
-                    <ul class="clearfix">
-                        <li>
-                            <a href="#"><img src="images/q1.jpg" alt=""></a>
-                            <p>&yen;10.00</p>
-                            <p>&yen;100.00</p>
-                        </li>
-                        <li>
-                            <a href="#"><img src="images/q2.jpg" alt=""></a>
-                            <p>&yen;10.00</p>
-                            <p>&yen;100.00</p>
-                        </li>
-                        <li>
-                            <a href="#"><img src="images/q3.jpg" alt=""></a>
-                            <p>&yen;10.00</p>
-                            <p>&yen;100.00</p>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                <div class="f_right m_r10"><a href="#">更多></a></div>
+            </div>
+            <div class="product_box_con">
+                <ul class="clearfix">
+                    <li>
+                        <a href="#"><img src="images/q1.jpg" alt=""></a>
+                        <p>&yen;10.00</p>
+                        <p>&yen;100.00</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="images/q2.jpg" alt=""></a>
+                        <p>&yen;10.00</p>
+                        <p>&yen;100.00</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="images/q3.jpg" alt=""></a>
+                        <p>&yen;10.00</p>
+                        <p>&yen;100.00</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="product_box">
+            <div class="product_box_tit"><h3>淘宝商城</h3></div>
+            <div class="product_box_con clearfix">
+                <a href="#" class="f_left w_50 b_right"><img src="images/q4.jpg" alt=""></a>
+                <a href="#" class="f_right w_50 b_bottom"><img src="images/q5.jpg" alt=""></a>
+                <a href="#" class="f_right w_50"><img src="images/q6.jpg" alt=""></a>
+            </div>
             <section class="product_box">
-                <div class="product_box_tit"><h3>淘宝商城</h3></div>
-                <div class="product_box_con clearfix">
-                    <a href="#" class="f_left w_50 b_right"><img src="images/q4.jpg" alt=""></a>
-                    <a href="#" class="f_right w_50 b_bottom"><img src="images/q5.jpg" alt=""></a>
-                    <a href="#" class="f_right w_50"><img src="images/q6.jpg" alt=""></a>
-                </div>
-                <section class="product_box">
-                <div class="product_box_tit"><h3>淘宝商城</h3></div>
-                <div class="product_box_con clearfix">
-                    <a href="#" class="f_right w_50 b_left"><img src="images/q7.jpg" alt=""></a>
-                    <a href="#" class="f_left w_50 b_bottom"><img src="images/q8.jpg" alt=""></a>
-                    <a href="#" class="f_left w_50"><img src="images/q9.jpg" alt=""></a>
-                </div>
-            </section>
-            <section class="product_box">
-                <div class="product_box_tit"><h3>淘宝商城</h3></div>
-                <div class="product_box_con clearfix">
-                    <a href="#" class="f_left w_50 b_right"><img src="images/q4.jpg" alt=""></a>
-                    <a href="#" class="f_right w_50 b_bottom"><img src="images/q5.jpg" alt=""></a>
-                    <a href="#" class="f_right w_50"><img src="images/q6.jpg" alt=""></a>
-                </div>
-            </section>
-        </main>
+            <div class="product_box_tit"><h3>淘宝商城</h3></div>
+            <div class="product_box_con clearfix">
+                <a href="#" class="f_right w_50 b_left"><img src="images/q7.jpg" alt=""></a>
+                <a href="#" class="f_left w_50 b_bottom"><img src="images/q8.jpg" alt=""></a>
+                <a href="#" class="f_left w_50"><img src="images/q9.jpg" alt=""></a>
+            </div>
+        </section>
+        <section class="product_box">
+            <div class="product_box_tit"><h3>淘宝商城</h3></div>
+            <div class="product_box_con clearfix">
+                <a href="#" class="f_left w_50 b_right"><img src="images/q4.jpg" alt=""></a>
+                <a href="#" class="f_right w_50 b_bottom"><img src="images/q5.jpg" alt=""></a>
+                <a href="#" class="f_right w_50"><img src="images/q6.jpg" alt=""></a>
+            </div>
+        </section>
+    </main>
     <script  src="js/hmsc.js"></script>
 </body>
 </html>
